# solana-project

./: package-lock.json  package.json
client/src/: keypair.json
programs/start-project/: Cargo.toml
programs/start-project/src/: lib.rs
start-project/: Anchor.toml
start-project/programs/start-project/src/: lib.rs
tests/: start-project.js
